argocd/apps/kube-prometheus-stack/config/alertmanager-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-ui
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-alertmanager
  hostnames:
    - alertmanager.nss.jkzl.eu
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: monitoring-auth
      backendRefs:
        - name: alertmanager-operated
          port: 9093
