argocd/apps/kube-prometheus-stack/config/alertmanager-IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ui
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.nss.jkzl.eu`) && PathPrefix(`/oauth2/`)
      kind: Rule
      services:
        - name: oauth2-proxy-ext
          port: 80
    - match: Host(`alertmanager.nss.jkzl.eu`)
      kind: Rule
      services:
        - name: alertmanager-operated
          port: 9093
      middlewares:
        - name: monitoring-auth-errors
        - name: monitoring-auth
  tls:
    secretName: nss-alertmanager-tls
