argocd/apps/kube-prometheus-stack/config/grafana-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-grafana
  hostnames:
    - grafana.ass-nss.jkuzel02.online
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-helm-grafana
          port: 80
