argocd/apps/kube-prometheus-stack/config/prometheus-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-ui
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-prometheus
  hostnames:
    - prometheus.nss.jkzl.eu
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: monitoring-auth
      backendRefs:
        - name: prometheus-operated
          port: 9090
